adds push/pull section and cmds

--- a/docs/software/dev_env/vscode.mdx
+++ b/docs/software/dev_env/vscode.mdx
@@ -1,6 +1,6 @@
 ---
 title: VSCode
-description: Tips and Instructions for Using VSCode for an FRC Project
+description: Tips and instructions for using VSCode for an FRC project
 hide_table_of_contents: true
 sidebar_position: 1
 ---
