--- a/docs/software/dev_env/git.mdx
+++ b/docs/software/dev_env/git.mdx
@@ -1,6 +1,6 @@
 ---
 title: Git and GitHub
-description: How to use git and GitHub to manage our projects
+description: How to use git and GitHub to manage our software projects.
 hide_table_of_contents: true
 sidebar_position: 2
 ---
@@ -29,11 +29,42 @@ Good version control practice is to commit frequently, but not after every line 
 
 Below is an example of a simple commit tree. Each commit is represented by a circle with a commit message associated with it. As you can see, the commit messages are short and to the point, but still give a good idea what was changed in the commit. They are also frequent enough to show the development process, but not so frequent that they are overwhelming.
 <img src={commitTree} alt="Commit Tree" />
+Its not a pretty as our lovely custom made graphic above, but you can run the following command to see a similar tree for your repo.
+```bash
+git log --graph --oneline --decorate --all
+```
+
+All new changes made to your repo are considered unstaged until manually staged into your commit index. Staged changes can be added to a commit. You can see the current staged status of your changes by running the command below.
+```bash
+git status
+```
+
+To create a commit first we need to stage changes from our working directory that we want included.  You can stage files you want included in your commit using the following command.
+```bash
+git add FILE_TO_STAGE_NAME
+```
+There are shortcuts to stage multiple files at a time, but I will leave that to you to discover.
+
+Once you have staged everything you want included in your commit you can check the staged status again with `git status` to ensure everything looks correct. If everything is as expected you can create a commit with the following command.
+```bash
+git commit
+```
+This will open an editor to allow you to write you commit message. Remember what we talked about, short, but informative. After the commit is complete feel free to check the `git log` again to see your new commit.
 
 #### Branches
-Branches are a way to create a separate line of development in your repo. This is useful for developing new features or fixing bugs without affecting the main line of development. The main branch is usually called `main` or `master`, but you can create as many branches as you want. Each branch has its own commits and can be merged back into the main branch when the development is complete.
+Branches are a way to create a separate line of development in your repo. This is useful for developing new features or fixing bugs without affecting the main line of development. The main branch is usually called `main` or `master`, but you can create as many branches as you want. Each branch has its own commits and can be merged back into the main branch when the development is complete. You can checkout a branch in your repo and it will update your working directory with the latest commit in that branch.
+
+You can select what branch your working directory is currently on using the following command.
+```bash
+git checkout BRANCH_NAME
+```
 
 When you create a new branch, it starts at the current commit of the branch you are on. You can then make changes and commit them to the new branch without affecting the main branch. When you are ready to merge your changes back into the main branch, you can do so with a pull request or by merging the branch directly.
+
+If you are starting development on a new feature or bug fix you can also create your own branch. The command below will create a branch with its parent commit/branch being what you currently have checked out in your working directory.
+```bash
+git checkout -b NEW_BRANCH_NAME
+```
 
 Branches allows us to work as a team without stepping on each other's toes. If you are working on a new feature, you can create a branch for that feature and work on it without affecting the main branch. When you are done, you can merge your changes back into the main branch and everyone else can pull those changes down to their local copy of the repo.
 
@@ -50,5 +81,30 @@ Merges can be done in several ways, but the most common is to use a pull request
 Below show a simple merge between two branches. The *shooter* branch is merged back into the *main* branch.
 <img src={mergeTree} alt="Commit Tree with Merge" />
 
+You can merge any branch into your currently checked out branch using the following command. This will merge the content from `NEW_CONTENT_BRANCH_NAME` onto your current branch.
+```bash
+git merge NEW_CONTENT_BRANCH_NAME
+```
+
+#### Push and Pull
+While everything we have talked about has been in the local space, git allows us to establish a remote. This is a "cloud" instance of the repo that can be accessed by all members of the project, not just on a single computer. Our remote is setup through GitHub.
+
+Once your branch is in a state that you want to push it to remote for either storage or for other developers to use you can PUSH your changes to your defined remote.
+```bash
+git push
+```
+
+If another developer has commit to the branch you are using from another computer you will need to make sure to PULL their changes into your working directory.
+```bash
+git pull
+```
+
+:::warning
+Git can get very nasty if you try to do the following
+    - Pushing to remote with your local repo missing commits on the remote repo
+    - Pulling from remote with your local repo having additional commits not on the remote repo
+
+It is very important that you pull before a work session to ensure your local repo is up to date with the remote repo. There are ways to fix this it occurs, but will likely require help from a mentor, unless you are a git wizard 🧙.
+:::
 
 ## GitHub
