--- a/docs/software/dev_env/git.mdx
+++ b/docs/software/dev_env/git.mdx
@@ -19,10 +19,10 @@ Git can get very complicated and the best way to learn is by using it. You can r
 
 Make sure to read our documentation for a short brief, but I would recommend using an interactive tutorial like [Learn Git Branching](https://learngitbranching.js.org/). These will help you get a feel for how git works and how to use it effectively.
 
-#### Repos
+### Repos
 A project that is tracked by git is called a *repository* or frequently shortened to *repo*. A repo is the file structure containing all the "code" used for the project. It also contains all git tracking information. It needs to know about all the [commits](#commits) and [branches](#branches) being made by all developers on the project to correctly update your local copy. Each programming project should live in its own repo. All of your robot projects are their own repo. We also several other repos for generic projects like this website!
 
-#### Commits
+### Commits
 The snapshots of your repo at a given moment of development is called a commits. Commits are a unique point in development that show the state of all tracked files in your repo. They are uniquely assigned a SHA, which is a long string of alpha-numeric characters. Something like `2c37172285088188fc6e7f100bc204fc4d6c446f` or `7a02abb2d621edc25a11c5869d9e6cb792c92580`. As you can see those are definitely unique, but not very helpful if we are trying to figure how what state the repo was in for that given commit. Luckily our buddy [Linus Torvalds](https://en.wikipedia.org/wiki/Linus_Torvalds) had that in mind and allowed us to attach a "commit message" to describe what the state of the repo was in for that given commit. For quick reference commits can also be abbreviated to the first 7 characters of the SHA, so `2c37172` or `7a02abb`. This is useful for quickly referencing commits in your code and documentation.
 
 Good version control practice is to commit frequently, but not after every line of code. Think about the big picture. Did I just complete a small development task? Did I just fix a bug? Did I just create the structure for a new feature? If so you should probably commit. The idea is that your commits act as breadcrumbs and could show your development process. 500+ line commits don't help anyone and can make it more difficult to figure out what you actually changed. A good rule of thumb is if you can't summarize your changes in less than 52 characters, your commit is too big.
@@ -43,7 +43,9 @@ To create a commit first we need to stage changes from our working directory tha
 ```bash
 git add FILE_TO_STAGE_NAME
 ```
+:::info
 There are shortcuts to stage multiple files at a time, but I will leave that to you to discover.
+:::
 
 Once you have staged everything you want included in your commit you can check the staged status again with `git status` to ensure everything looks correct. If everything is as expected you can create a commit with the following command.
 ```bash
@@ -51,7 +53,7 @@ git commit
 ```
 This will open an editor to allow you to write you commit message. Remember what we talked about, short, but informative. After the commit is complete feel free to check the `git log` again to see your new commit.
 
-#### Branches
+### Branches
 Branches are a way to create a separate line of development in your repo. This is useful for developing new features or fixing bugs without affecting the main line of development. The main branch is usually called `main` or `master`, but you can create as many branches as you want. Each branch has its own commits and can be merged back into the main branch when the development is complete. You can checkout a branch in your repo and it will update your working directory with the latest commit in that branch.
 
 You can select what branch your working directory is currently on using the following command.
@@ -71,7 +73,7 @@ Branches allows us to work as a team without stepping on each other's toes. If y
 Below is an example of a branch tree. As you can see there are two branches made from the main branch. Each branch has its own commits and can be merged back into the main branch when the development is complete. The branch names are also short and to the point, but still give a good idea what was changed in the branch.
 <img src={branchTree} alt="Commit Tree with Branches" />
 
-#### Merge
+### Merge
 As you can see in the image above there is a point where the two branches merge back into the main branch. This is called a merge. Merges are used to combine the changes from one branch into another. This is useful when you have completed a feature or fixed a bug and want to bring those changes back into the main branch.
 
 When you merge a branch, git will try to automatically combine the changes from both branches. If there are no conflicts, the merge will be successful and the changes will be applied to the main branch. If there are conflicts, git will prompt you to resolve them before completing the merge.
@@ -86,7 +88,7 @@ You can merge any branch into your currently checked out branch using the follow
 git merge NEW_CONTENT_BRANCH_NAME
 ```
 
-#### Push and Pull
+### Push and Pull
 While everything we have talked about has been in the local space, git allows us to establish a remote. This is a "cloud" instance of the repo that can be accessed by all members of the project, not just on a single computer. Our remote is setup through GitHub.
 
 Once your branch is in a state that you want to push it to remote for either storage or for other developers to use you can PUSH your changes to your defined remote.
@@ -104,7 +106,7 @@ Git can get very nasty if you try to do the following
     - Pushing to remote with your local repo missing commits on the remote repo
     - Pulling from remote with your local repo having additional commits not on the remote repo
 
-It is very important that you pull before a work session to ensure your local repo is up to date with the remote repo. There are ways to fix this it occurs, but will likely require help from a mentor, unless you are a git wizard 🧙.
+It is very important that you pull before a work session to ensure your local repo is up to date with the remote repo. There are ways to fix it if this occurs, but will likely require help from a mentor, unless you are a git wizard 🧙.
 :::
 
 ## GitHub
