--- a/docs/software/dev_env/git.mdx
+++ b/docs/software/dev_env/git.mdx
@@ -11,7 +11,7 @@ import mergeTree from '@site/static/img/software/dev_env/git/merge-tree.png';
 
 # Version Control with Git and GitHub
 
-<hr style="border: none; background-color: lightgray; height: 5px;">
+<hr style="border: none; background-color: lightgray; height: 5px;"/>
 
 ## Git
 We use a tool called *git* for version control. This allows us to take "snapshots" of our code at a given time and save it for development documentation, reference, and backups. Git is a very powerful tool, but can be confusing and difficult to master. It also allows for simultaneous development across peers which is very helpful when multiple people are working on the same project.
@@ -22,7 +22,7 @@ Make sure to read our documentation for a short brief, but I would recommend usi
 
 ### Repos
 A project that is tracked by git is called a *repository* or frequently shortened to *repo*. A repo is the file structure containing all the "code" used for the project. It also contains all git tracking information. It needs to know about all the [commits](#commits) and [branches](#branches) being made by all developers on the project to correctly update your local copy. Each programming project should live in its own repo. All of your robot projects are their own repo. We also several other repos for generic projects like this website!
-<hr style="border: none; background-color: lightgray; height: 1px;">
+<hr style="border: none; background-color: lightgray; height: 1px;"/>
 
 
 ### Commits
@@ -55,7 +55,7 @@ Once you have staged everything you want included in your commit you can check t
 git commit
 ```
 This will open an editor to allow you to write you commit message. Remember what we talked about, short, but informative. After the commit is complete feel free to check the `git log` again to see your new commit.
-<hr style="border: none; background-color: lightgray; height: 1px;">
+<hr style="border: none; background-color: lightgray; height: 1px;"/>
 
 ### Branches
 Branches are a way to create a separate line of development in your repo. This is useful for developing new features or fixing bugs without affecting the main line of development. The main branch is usually called `main` or `master`, but you can create as many branches as you want. Each branch has its own commits and can be merged back into the main branch when the development is complete. You can checkout a branch in your repo and it will update your working directory with the latest commit in that branch.
@@ -76,7 +76,7 @@ Branches allows us to work as a team without stepping on each other's toes. If y
 
 Below is an example of a branch tree. As you can see there are two branches made from the main branch. Each branch has its own commits and can be merged back into the main branch when the development is complete. The branch names are also short and to the point, but still give a good idea what was changed in the branch.
 <img src={branchTree} alt="Commit Tree with Branches" />
-<hr style="border: none; background-color: lightgray; height: 1px;">
+<hr style="border: none; background-color: lightgray; height: 1px;"/>
 
 
 ### Merge
@@ -93,7 +93,7 @@ You can merge any branch into your currently checked out branch using the follow
 ```bash
 git merge NEW_CONTENT_BRANCH_NAME
 ```
-<hr style="border: none; background-color: lightgray; height: 1px;">
+<hr style="border: none; background-color: lightgray; height: 1px;"/>
 
 
 ### Push and Pull
@@ -116,7 +116,7 @@ Git can get very nasty if you try to do the following
 
 It is very important that you pull before a work session to ensure your local repo is up to date with the remote repo. There are ways to fix it if this occurs, but will likely require help from a mentor, unless you are a git wizard 🧙.
 :::
-<hr style="border: none; background-color: lightgray; height: 5px;">
+<hr style="border: none; background-color: lightgray; height: 5px;"/>
 
 
 ## GitHub
