--- a/docs/software/dev_env/vscode.mdx
+++ b/docs/software/dev_env/vscode.mdx
@@ -2,8 +2,8 @@
 title: VSCode
 description: Tips and instructions for using VSCode for an FRC project
 hide_table_of_contents: true
-sidebar_position: 1
+sidebar_position: 2
 ---
 
 # VSCode
-VSCode is a lightweight development editor that can be equipt with plugins to enchance productivity.
+VSCode is a lightweight development editor that can be equipped with plugins to enhance productivity.
