adds template files for future docs

--- a/docs/software/tools/vscode.mdx
+++ b/docs/software/tools/vscode.mdx
@@ -16,6 +16,8 @@ Most of the complex git commands are hidden in a sub menu that you can access by
 Be careful when using the `Sync Changes` button, as it will pull changes from the remote repository and merge them with your local changes. If there are any conflicts, you will need to resolve them before you can push your changes.
 ::::
 
+You can see what branch you are currently on in the bottom left corner of the window. You can also switch branches by clicking on the branch name and selecting a different branch from the list. If you want to create a new branch, you can do so by clicking on the `+` button next to the branch name and entering a name for the new branch.
+
 ### WPILib Extension
 The WPILib extension for VSCode is a must-have for any FRC team. It should be installed by default when you follow the [WPILib setup instructions](https://docs.wpilib.org/en/stable/docs/zero-to-robot/step-2/wpilib-setup.html). This extension makes it easies to build and deploy robot code, as well as providing helpful features like code completion, syntax highlighting, and debugging support. All of the commands for building and deploying code are available in the Command Palette, which you can access by pressing `Ctrl + Shift + P`. You can then type in the command you want to run, such as `WPILib: Build Robot Code` or `WPILib: Deploy Robot Code`, and it will run the command for you.
 ::::tip
