--- a/docs/software/robot_dev/commands.mdx
+++ b/docs/software/robot_dev/commands.mdx
@@ -2,6 +2,7 @@
 title: Commands
 description: Command basics and programming tips
 hide_table_of_contents: true
+sidebar_position: 2
 ---
 
 # Commands
