--- a/docs/software/robot_dev/subsystems.mdx
+++ b/docs/software/robot_dev/subsystems.mdx
@@ -2,6 +2,7 @@
 title: Subsystems
 description: Subsystem basics and programming tips
 hide_table_of_contents: true
+sidebar_position: 1
 ---
 
 # Subsystems
